panko-compiletest/src/snapshots/panko_compiletest__typeck-panko__tests__cases__execute__relational-ops__test_int_compare.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/relational-ops/test_int_compare.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (definition a~1 `int` (42 `int`))
         (definition b~2 `int` (27 `int`))
         (return (add `int` (less `int` `int` (a~1 `int`) (add `int` (a~1 `int`) (b~2 `int`))) (greater `int` `int` (a~1 `int`) (b~2 `int`)))))))

----- stderr -----
