panko-compiletest/src/snapshots/panko_compiletest__typeck-panko__tests__cases__execute__relational-ops__test_unsigned_greater.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/relational-ops/test_unsigned_greater.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (definition a~1 `unsigned int` (noop-type-conversion `unsigned int` (42 `int`)))
         (definition b~2 `unsigned int` (noop-type-conversion `unsigned int` (27 `int`)))
         (return (add `int` (greater-equal `int` `int` (a~1 `unsigned int`) (b~2 `unsigned int`)) (greater-equal `int` `int` (a~1 `unsigned int`) (a~1 `unsigned int`)))))))

----- stderr -----
